fix: correcciones para hacer funcionar roles, get menuItam y crear MenuItem